--- a/Views/Admin/Search.cshtml
+++ b/Views/Admin/Search.cshtml
@@ -9,6 +9,15 @@
     <div>
         Title to Find: <input asp-for="Title" />
     </div>
+    <div>
+        Author to Find: <input asp-for="Author" />
+    </div>
+    <div>
+        Minimun Price: <input asp-for="MinPrice" />
+    </div>
+    <div>
+        Maximum Price: <input asp-for="MaxPrice" />
+    </div>
     <!-- TODO: Add fields needed for seraching -->
     <div>
         <input type="submit" value="Search"/>
